--- a/levels/level2.org
+++ b/levels/level2.org
@@ -1,17 +1,21 @@
 #+title: Level2
 
 * Links
-|      |         Decimal | Binary                              |
-|------+-----------------+-------------------------------------|
-| B1   |                 |                                     |
-| Ip   |  192.168.53.222 | 11000000 10101000 00110101 11011110 |
-| Mask |                 |                                     |
-|      |                 |                                     |
-| A1   |                 |                                     |
-| IP   |                 |                                     |
-| Mask | 255.255.255.224 | 11111111 11111111 11111111 11100000 |
-|      | /27             | 11000000 10101000 00110101 11000000 |
-|      |                 | 192.168.53.192                      |
+|            | Decimal               | Binary                              |
+|------------+-----------------------+-------------------------------------|
+| B1         |                       |                                     |
+|------------+-----------------------+-------------------------------------|
+| HostIp     | 192.168.53.222        | 11000000 10101000 00110101 11011110 |
+| Mask       | =255.255.255.224=       | =11111111 11111111 11111111 11100000= |
+| SubnetAddr | =192.168.53.192/27=     | 11000000 10101000 00110101 11000000 |
+|------------+-----------------------+-------------------------------------|
+| A1         |                       |                                     |
+|------------+-----------------------+-------------------------------------|
+| IP         | =192.168.53.221=        | =11000000 10101000 00110101 11011101= |
+| Mask       | 255.255.255.224 (/27) | 11111111 11111111 11111111 11100000 |
+| SubnetAddr | 192.168.53.192/27     | 11000000 10101000 00110101 11000000 |
+|            |                       |                                     |
+|------------+-----------------------+-------------------------------------|
 
 Ideen:
 - Ip von B1 muss in network von A1 liegen
@@ -24,20 +28,24 @@ Ideen:
 
 * Rechts
 
-|      | Decimal         | Binary                              |
-|------+-----------------+-------------------------------------|
-| B1   |                 |                                     |
-| Ip   |                 |                                     |
-| Mask | /30             | 11111111 11111111 11111111 11111100 |
-|      |                 |                                     |
-| A1   |                 |                                     |
-| IP   |                 |                                     |
-| Mask | 255.255.255.252 | 11111111 11111111 11111111 11111100 |
-|      | = /30           |                                     |
-|      |                 | 192.168.53.192                      |
+|            | Decimal         | Binary                              |
+|------------+-----------------+-------------------------------------|
+| B1         |                 |                                     |
+| HostIp     | =192.168.53.5=    | 11000000 10100000 00110101 00000101 |
+| Mask       | /30             | 11111111 11111111 11111111 11111100 |
+| SubnetAddr | =192.168.53.4/30= | 11000000 10100000 00110101 00000100 |
+|            |                 |                                     |
+| A1         |                 |                                     |
+| HostIp     | =192.168.53.6=    | 11000000 10100000 00110101 00000110 |
+| Mask       | 255.255.255.252 | 11111111 11111111 11111111 11111100 |
+| SubnetAddr | =192.168.53.4/30= | 11000000 10100000 00110101 00000100 |
+|            |                 |                                     |
+|            | = /30           |                                     |
+|            |                 | 192.168.53.192                      |
 
 - hier haben wir die gleiche Subnet mask vorgegeben, nur einmal in Decimal und einmal in [[id:aeebc00e-c1e6-499a-a7bf-b910d3bdf78a][CIDR notation]]
 - diese mask lässt für Host Ports nur 4 Möglichkeiten
 - außerdem kann diese Mask mit 256 / 4 = 64 subnets korrespondieren
   - also müssen die Host Parts (die letzten 3 bits) der IPAdressen im gleichen Breich 4*n < ip < 4*n+3 liegen
   - der Rest muss gleich sein
+- die SubnetMask unterteilt den Addressbereich 0-256 in 64 große Teile, jeweils 4 Adressen
