--- a/roam/20250222123723-network.org
+++ b/roam/20250222123723-network.org
@@ -5,13 +5,16 @@
 #+date: [2025-02-22 Sat 12:37]
 #+startup: overview
 
+
+
 * Elements of a network
 - [[id:0525e701-1109-4bc5-9c32-4e143388ac78][Hosts]]: individual devices that receive and send data
-- *Routers*: Direct data between networks
-- *Switches*: Connect devices within the same network
+- *[[id:db001e26-290a-4098-92ed-5c67db1ae3e1][Routers]]*: Direct data between networks
+- *[[id:3ba5384b-fd1b-4d24-abd6-d150df31aba6][Switches]]*: Connect devices within the same network
 - *Firewalls*: Monitor and control incoming and outgoing network traffic
 - *Access Points*: Extend the wireless network
 - *Cables*: Physical connections for data transfer
 - *Modems*: Connect to the Internet
 
 * [[id:eba31583-df38-479d-bd81-00f4733bfd52][Subnets]]
+* [[id:6dd9f200-6883-4318-aebb-7d8c16948ae4][IP internet protocol]]
